fix: increase gap

--- a/keep-ui/app/providers/provider-tile.css
+++ b/keep-ui/app/providers/provider-tile.css
@@ -1,22 +1,22 @@
 .tile-basis {
-  flex-basis: calc(14.285% - 0.5rem);
+  flex-basis: calc(14.285% - 1.25rem);
 }
 
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
   .tile-basis {
-    flex-basis: calc(100% - 0.5rem);
+    flex-basis: calc(100% - 1.25rem);
   }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
   .tile-basis {
-    flex-basis: calc(33.333333% - 0.5rem);
+    flex-basis: calc(33.333333% - 1.25rem);
   }
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 2048px) {
   .tile-basis {
-    flex-basis: calc(25% - 0.5rem);
+    flex-basis: calc(25% - 1.25rem);
   }
 }
